# wingman

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: doc_manager.py  main.py  store.py
src/ai/: agents.py  doc_manager.py  store.py  tools.py
