[project]
name = "chatabout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.128.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "langchain-chroma>=1.1.0",
    "pypdf>=6.6.2",
    "dotenv>=0.9.9",
    "langchain-cloudflare>=0.2.1",
    "langgraph-checkpoint-postgres>=3.0.4",
    "lxml>=6.0.2",
]
